# mmolb-algorithmic-rankings

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python.yml
src/mmolb_utils/apis/: mmolb.py
src/mmolb_utils/apis/cashews/: __init__.py  api.py  chron_api.py  derived_api.py  misc.py  request.py  stats_api.py  types.py
src/mmolb_utils/lib/: attributes.py  cached_ews.py  duel.py  io.py  json_lib.py  regression.py  time.py  triangulation.py
src/mmolb_utils/lib/stats/: batting.py  defense.py  operations.py  pitching.py
src/mmolb_utils/scripts/: dp.py  equipment.py  greedy_lucky_shoes.py  home_game_hist.py  home_wins.py  postseason.py  rankings.py  records.py  talk_avg.py
